[project]
name = "boilermaker-servicebus"
version = "0.8.0"
description = "An async python Background task system using Azure Service Bus Queues"
authors = [{ "name" = "Erik Aker", "email" = "eaker@mulliganfunding.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-azure-clients-toolbox>=0.4.0",
    "anyio >= 4.7.0",
    "azure-core-tracing-opentelemetry >= 1.0.0b12",
    "azure-servicebus >= 7.12.3",
    "azure-identity >= 1.21.0",
    "opentelemetry-api >= 1.34.0",
    "pydantic >= 2.10.3",
    "pydantic-settings >= 2.8.0",
    "uuid-utils>=0.11.0",
]

[project.urls]
Documentation = "https://mulliganfunding.github.io/boilermaker-servicebus/"
Repository = "https://github.com/MulliganFunding/boilermaker-servicebus"
Issues = "https://github.com/MulliganFunding/boilermaker-servicebus/issues"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mypy>=1.0.1",
    "ruff>=0.13.0",
    # Documentation dependencies
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.6.20",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
]

[build-system]
requires = ["setuptools", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
minversion = "8.3"
pythonpath = "."
asyncio_mode = "auto"
xfail_strict = true
addopts = "--cov-report=term-missing:skip-covered --cov=boilermaker --strict-config --strict-markers --cov-report html"
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.report]
exclude_also = ["def __repr__"]

[tool.coverage.run]
omit = [
    # omit tracing.py and run
    "*/tracing.py",
]

[tool.ruff]
src = ["boilermaker", "tests"]
fix = true
show-fixes = true
output-format = "full"
line-length = 110

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "FA", # flake8-future-annotations
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "W",  # pycodestyle warning
]
ignore = ["N818", "N805"] # exception naming

[tool.ruff.lint.isort]
force-single-line = false
order-by-type = false
